Fix: Add new post button hidden under footer

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -5,6 +5,12 @@ body {
 a {
   color: white;
 }
+main {
+  margin-bottom: 5%;
+}
+.newPost {
+  margin-bottom: 50px;
+}
 
 /******************* Navbar *******************/
 .navbar {
@@ -152,6 +158,7 @@ a {
   color: gray;
   text-align: center;
   padding-top: 5px;
+  margin-top: 100%;
   font-size: 15px;
   position: fixed;
   left: 0;
